src/components/z-input/styles-checkbox-radio.css
.radio-wrapper,
.checkbox-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 24px;
  flex-direction: row;
  align-items: center;
  color: var(--color-default-text);
  fill: var(--color-primary01);
  font-family: var(--font-family-sans);
}

.radio-wrapper:hover,
.checkbox-wrapper:hover {
  color: var(--color-hover-primary);
  fill: var(--color-hover-primary-icon);
}

.radio-wrapper > input,
.checkbox-wrapper > input {
  position: absolute;
  z-index: -1;
  opacity: 0;
  pointer-events: none;
}

.radio-wrapper .radio-label,
.checkbox-wrapper .checkbox-label {
  display: inline-flex;
  min-height: 24px;
  align-items: center;
  padding: 3px 0;
  margin: 0;
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  line-height: 1;
  text-transform: inherit;
}

.radio-wrapper input:not(:disabled) + .radio-label,
.checkbox-wrapper input:not(:disabled) + .checkbox-label {
  cursor: pointer;
}

.radio-wrapper .radio-label z-icon,
.checkbox-wrapper .checkbox-label z-icon {
  min-width: 24px;
  min-height: 24px;
  cursor: pointer;
  fill: inherit;
}

:host([size="small"]) .radio-wrapper .radio-label z-icon,
:host([size="small"]) .checkbox-wrapper .checkbox-label z-icon {
  --z-icon-width: 16px;
  --z-icon-height: 16px;
}

:host([size="small"]) .radio-wrapper .radio-label,
:host([size="small"]) .checkbox-wrapper .checkbox-label {
  font-size: var(--font-size-2);
}

:host([size="x-small"]) .radio-wrapper .radio-label z-icon,
:host([size="x-small"]) .checkbox-wrapper .checkbox-label z-icon {
  --z-icon-width: 14px;
  --z-icon-height: 14px;
}

:host([size="x-small"]) .radio-wrapper .radio-label,
:host([size="x-small"]) .checkbox-wrapper .checkbox-label {
  font-size: var(--font-size-1);
}

.radio-wrapper .radio-label.after,
.checkbox-wrapper .checkbox-label.after {
  flex-direction: row;
}

.radio-wrapper .radio-label.before,
.checkbox-wrapper .checkbox-label.before {
  flex-direction: row-reverse;
}

.radio-wrapper .radio-label.after > span,
.checkbox-wrapper .checkbox-label.after > span {
  margin-left: var(--space-unit);
}

.radio-wrapper .radio-label.before > span,
.checkbox-wrapper .checkbox-label.before > span {
  margin-right: var(--space-unit);
}

:host([size="small"]) .radio-wrapper .radio-label.after > span,
:host([size="small"]) .checkbox-wrapper .checkbox-label.after > span,
:host([size="x-small"]) .radio-wrapper .radio-label.after > span,
:host([size="x-small"]) .checkbox-wrapper .checkbox-label.after > span {
  margin-left: calc(var(--space-unit) * 0.5);
}

:host([size="small"]) .radio-wrapper .radio-label.before > span,
:host([size="small"]) .checkbox-wrapper .checkbox-label.before > span,
:host([size="x-small"]) .radio-wrapper .radio-label.before > span,
:host([size="x-small"]) .checkbox-wrapper .checkbox-label.before > span {
  margin-right: calc(var(--space-unit) * 0.5);
}

/* focus */
.radio-wrapper > input:focus:focus-visible + .radio-label > z-icon {
  border-radius: 50%;
}

.checkbox-wrapper > input:focus:focus-visible + .checkbox-label > z-icon {
  border-radius: var(--border-radius-small);
}

.radio-wrapper > input:focus:focus-visible + .radio-label > z-icon,
.checkbox-wrapper > input:focus:focus-visible + .checkbox-label > z-icon {
  box-shadow: var(--shadow-focus-primary);
}

/* disabled */
.radio-wrapper > input:disabled + .radio-label,
.checkbox-wrapper > input:disabled + .checkbox-label {
  color: var(--color-disabled03);
}

.radio-wrapper > input:disabled + .radio-label > z-icon,
.checkbox-wrapper > input:disabled + .checkbox-label > z-icon {
  cursor: default;
  fill: var(--color-disabled01);
}

